@@ -308,9 +308,11 @@ SetIndexFromAny(interp, objPtr)
     Tcl_Interp *interp;		/* Used for error reporting if not NULL. */
     register Tcl_Obj *objPtr;	/* The object to convert. */
 {
+    if (interp) {
     Tcl_AppendToObj(Tcl_GetObjResult(interp),
 	    "can't convert value to index except via Tcl_GetIndexFromObj API",
 	    -1);
+    }
     return TCL_ERROR;
 }
 
